--- a/Fortree.html
+++ b/Fortree.html
@@ -8,59 +8,41 @@
   <body>
     <script>
       var tree = {
-        value: "-",
+        value: 3,
         left: {
-          value: "+",
-          left: { value: "a" },
+          value: 9,
+        },
+        right: {
+          value: 20,
+          left: {
+            value: 15,
+          },
           right: {
-            value: "*",
-            left: { value: "b" },
-            right: { value: "c" },
+            value: 7,
           },
         },
-        right: { value: "/", left: { value: "d" }, right: { value: "e" } },
       };
-      //递归遍历
-      //   let result = [];
-      //   function dfs(node) {
-      //     if (node) {
-      //       result.push(node.value);
-      //       dfs(node.left);
-      //       dfs(node.right);
-      //     }
-      //   }
-      //   dfs(tree);
-      //   console.log(result);
-      //1.非递归遍历
       //1.1前序遍历
       function dfs1(nodes) {
-        if (!nodes) {
-          return [];
-        }
+        if (!nodes) return [];
         let result = [];
         let stack = [];
         stack.push(nodes);
-        while (stack.length > 0) {
-          let node = stack.pop();
-          result.push(node.value);
-          if (node.right) {
-            stack.push(node.right);
-          }
-          if (node.left) {
-            stack.push(node.left);
-          }
+        while (stack.length) {
+          let nodes = stack.pop();
+          result.push(nodes.value);
+          if (nodes.right) stack.push(nodes.right);
+          if (nodes.left) stack.push(nodes.left);
         }
         return result;
       }
       console.log(dfs1(tree), "前序");
       //1.2中序遍历
       function dfs2(nodes) {
-        if (!nodes) {
-          return [];
-        }
+        if (!nodes) return [];
         let result = [];
         let stack = [];
-        while (stack.length !== 0 || nodes) {
+        while (stack.length || nodes) {
           while (nodes) {
             stack.push(nodes);
             nodes = nodes.left;
@@ -71,72 +53,50 @@
         }
         return result;
       }
-      //1.2中序遍历
-      function dfs4(nodes) {
-        if (!nodes) {
-          return [];
-        }
-        let result = [];
-        let stack = [];
-        while (stack.length > 0 || nodes) {
-          if (nodes) {
-            stack.push(nodes);
-            nodes = nodes.left;
-          } else {
-            nodes = stack.pop();
-            result.push(nodes.value);
-            nodes = nodes.right;
-          }
-        }
-        return result;
-      }
-      console.log(dfs4(tree), "中序");
       console.log(dfs2(tree), "中序");
       //1.3后序遍历
       function dfs3(nodes) {
-        if (!nodes) {
-          return [];
-        }
+        if (!nodes) return [];
         let result = [];
         let stack = [];
         stack.push(nodes);
         while (stack.length) {
-          let node = stack.pop();
-          result.unshift(node.value);
-          if (node.left) stack.push(node.left);
-          if (node.right) stack.push(node.right);
+          let nodes = stack.pop();
+          result.unshift(nodes.value);
+          if (nodes.left) stack.push(nodes.left);
+          if (nodes.right) stack.push(nodes.right);
         }
         return result;
       }
       console.log(dfs3(tree), "后序");
       //1.4层序遍历
-      /**
-       * 使用这种复杂度高
-       * while(stack.length){
-       *    let node=stack.shift()
-       * }
-       */
       function bfs(nodes) {
-        if (!nodes) {
-          return [];
-        }
+        if (!nodes) return [];
         let result = [];
         let stack = [];
         stack.push(nodes);
-        let pointer = 0;
-        while (pointer < stack.length) {
-          let node = stack[pointer++];
-          result.push(node.value);
-          if (node.left) {
-            stack.push(node.left);
+        while (stack.length) {
+          let level = [];
+          let numbers = stack.length;
+          while (numbers--) {
+            let nodes = stack.shift();
+            level.push(nodes.value);
+            if (nodes.left) stack.push(nodes.left);
+            if (nodes.right) stack.push(nodes.right);
           }
-          if (node.right) {
-            stack.push(node.right);
-          }
+          result.push(level);
         }
         return result;
       }
       console.log(bfs(tree), "层序");
+
+      let users = [
+        { id: 1, name: "John" },
+        { id: 2, name: "Pete" },
+        { id: 1, name: "Mary" },
+      ];
+      let user = users.filter((item) => item.id == 1);
+      console.log(user);
     </script>
   </body>
 </html>
